--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,47 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/titleFragment2">
+    app:startDestination="@id/home">
 
     <fragment
-        android:id="@+id/titleFragment2"
+        android:id="@+id/home"
         android:name="com.example.androidproject.TitleFragment"
-        android:label="TitleFragment" >
-        <action
-            android:id="@+id/action_titleFragment2_to_messagesFragment"
-            app:destination="@id/messagesFragment" />
-        <action
-            android:id="@+id/action_titleFragment2_to_notificationFragment"
-            app:destination="@id/notificationFragment" />
-        <action
-            android:id="@+id/action_titleFragment2_to_userProfile"
-            app:destination="@id/userProfile" />
-    </fragment>
+        android:label="TitleFragment" />
 
     <fragment
-        android:id="@+id/messagesFragment"
+        android:id="@+id/messages"
         android:name="com.example.androidproject.MessagesFragment"
         android:label="fragment_messages"
         tools:layout="@layout/fragment_messages" />
     <fragment
-        android:id="@+id/notificationFragment"
+        android:id="@+id/notifications"
         android:name="com.example.androidproject.NotificationFragment"
-        android:label="NotificationFragment">
-        <action
-            android:id="@+id/action_notificationFragment_to_userProfile"
-            app:destination="@id/userProfile" />
-    </fragment>
+        android:label="NotificationFragment"/>
 
     <fragment
         android:id="@+id/userProfile"
         android:name="com.example.androidproject.userProfileSettingsFragment"
         android:label="fragment_user_profile"
-        tools:layout="@layout/fragment_user_profile" >
-        <action
-            android:id="@+id/action_userProfile_to_notificationFragment"
-            app:destination="@id/notificationFragment" />
-        <action
-            android:id="@+id/action_userProfile_to_titleFragment2"
-            app:destination="@id/titleFragment2" />
-    </fragment>
+        tools:layout="@layout/fragment_user_profile" />
 </navigation>
