--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,58 +3,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
         android:background="@drawable/backround_img_1"
-        android:orientation="vertical"
-        tools:context=".LoginFragment">
+        tools:context=".LoginActivity">
 
-        <!-- TODO: Update blank fragment layout -->
 
         <LinearLayout
-            android:padding="10dp"
-            android:layout_width="250dp"
+            android:layout_width="300dp"
             android:layout_height="476dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="60dp"
             android:background="@color/white"
+            android:elevation="60dp"
             android:orientation="vertical"
-            android:elevation="60dp">
+            android:padding="10dp">
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/username_input"
+                android:layout_marginTop="12dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="185dp"
-                android:layout_height="61dp"
+                android:layout_width="250dp"
+                android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="20dp"
                 app:startIconDrawable="@drawable/ic_baseline_person_24">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="132dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="20dp"
-                    android:inputType="text" />
+                    android:id="@+id/username_input"
+                    android:layout_width="250dp"
+                    android:layout_height="60dp"
+                    android:inputType="textEmailAddress"
+                    android:hint="Enter your email-address"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/password_input"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="180dp"
-                android:layout_height="40dp"
+                android:layout_width="250dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="10dp"
                 android:layout_gravity="center_horizontal"
                 app:endIconMode="password_toggle"
                 app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="132dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="20dp"
-                    android:inputType="textPassword" />
+                    android:id="@+id/password_input"
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:inputType="textPassword"
+                    android:hint="Enter your password"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,5 +94,17 @@
                 app:cornerRadius="4dp" />
 
         </LinearLayout>
-    </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="64dp"
+            android:visibility="gone" />
+
+    </FrameLayout>
 </layout>
