--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -13,6 +13,7 @@
         android:src="@mipmap/ic_launcher"/>
 
     <TextView
+        android:textColor="@color/black"
         android:id="@+id/chat_message"
         android:textSize="18sp"
         android:layout_marginLeft="5dp"
@@ -23,5 +24,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:id="@+id/seen"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_below="@id/chat_message"
+        />
 
 </RelativeLayout>
