--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -32,6 +32,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+
+
+        <TextView
+            android:id="@+id/seen"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/chat_message"
+            />
+
     </RelativeLayout>
 
 </RelativeLayout>
