--- a/app/src/main/res/layout/friends_layout.xml
+++ b/app/src/main/res/layout/friends_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,4 +22,34 @@
         android:text="username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+
+        android:layout_below="@id/friends_username"
+        android:visibility="gone"
+        android:id="@+id/onStatus"
+        app:civ_border_width="10dp"
+        app:civ_border_color="#05df29"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="-15dp"
+        android:layout_toRightOf="@id/friends_profile_image"
+        android:layout_toEndOf="@id/friends_profile_image"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+
+        android:layout_below="@id/friends_username"
+        android:id="@+id/offStatus"
+        app:civ_border_width="10dp"
+        app:civ_border_color="#bfbfbf"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="-15dp"
+        android:layout_toRightOf="@id/friends_profile_image"
+        android:layout_toEndOf="@id/friends_profile_image"/>
+
 </RelativeLayout>
