--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -7,8 +7,14 @@
         <item name="colorPrimary">@color/design_default_color_primary</item>
         <item name="colorAccent">@color/design_default_color_primary</item>
         <item name="colorPrimaryDark">@color/design_default_color_primary_dark</item>
+    </style>
 
+    <style name="AppTheme.InChatPop">
 
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
     </style>
 
     <style name="MenuStyle" parent="Theme.AppCompat.Light">
@@ -23,5 +29,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="inchat_popup_user">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
 
 </resources>
