--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -25,4 +25,9 @@
         android:name="com.example.androidproject.ProfileNavigationFragment"
         android:label="fragment_user_profile"
         tools:layout="@layout/fragment_profile_navigation_fragment" />
+    <fragment
+        android:id="@+id/mapsFragment"
+        android:name="com.example.androidproject.MapsFragment"
+        android:label="fragment_maps"
+        tools:layout="@layout/fragment_maps" />
 </navigation>
