--- a/app/src/main/res/layout/activity_person_profile.xml
+++ b/app/src/main/res/layout/activity_person_profile.xml
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="45dp"
             android:background="@color/black"
-            android:text="Send Friend Request"
+            android:text="Decline Friend Request"
             android:textSize="16sp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/person_send_friend_request_btn"/>
