--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -44,34 +44,45 @@
         android:layout_below="@id/bar_layout"
         android:layout_above="@id/bottom_layout"
         android:id="@+id/chat_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <RelativeLayout
-        android:backgroundTint="@color/purple_500"
         android:id="@+id/bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_height="62dp"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
-        android:padding="4dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:backgroundTint="@color/purple_500"
+        android:padding="4dp">
 
         <EditText
-            android:background="@drawable/edit_text_chat"
             android:id="@+id/send_text"
-            android:hint="Type message"
-            android:layout_centerVertical="true"
+            android:layout_width="260dp"
+            android:layout_height="39dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="-290dp"
+            android:layout_toStartOf="@+id/sendBtn"
             android:layout_toLeftOf="@id/send_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:background="@drawable/edit_text_chat"
+            android:hint="Type message"
+            android:paddingLeft="5dp" />
 
         <ImageButton
-            android:background="@drawable/ic_baseline_send_24"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
             android:id="@+id/sendBtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"/>
+            android:layout_width="52dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/ic_baseline_send_24" />
 
     </RelativeLayout>
 
