added sum stuff

--- a/app/src/main/res/layout/friends_layout.xml
+++ b/app/src/main/res/layout/friends_layout.xml
@@ -11,16 +11,18 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="8dp"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_marginTop="1dp"
+        android:src="@mipmap/ic_launcher"
+        android:transitionName="imageTransition" />
 
     <TextView
         android:id="@+id/friends_username"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="1dp"
         android:layout_toEndOf="@id/friends_profile_image"
         android:layout_toRightOf="@id/friends_profile_image"
         android:text="username"
@@ -40,7 +42,7 @@
         android:layout_toEndOf="@+id/friends_profile_image"
         android:text="last message"
         android:maxLines="1"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
     <de.hdodenhof.circleimageview.CircleImageView
 
@@ -73,9 +75,9 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:layout_below="@+id/friends_username"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="30dp"
         android:background="#c0c0c0" />
 
 </RelativeLayout>
