--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,12 @@
     tools:context=".MainActivity">
 
 <com.google.android.material.appbar.AppBarLayout
-    app:layout_constraintTop_toTopOf="@+id/nav_host_fragment"
+    android:id="@+id/app_bar_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:elevation="0dp"
+    app:layout_constraintTop_toTopOf="@+id/nav_host_fragment"
+  >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBar"
