--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -11,27 +11,31 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/bar_layout"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:elevation="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/design_default_color_primary_dark"
+            android:background="@color/white"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:id="@+id/chatToolBar"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            app:theme="@style/ToolbarThemeBlack">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
+                android:transitionName="imageTransition"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
 
             <TextView
                 android:id="@+id/username_display"
+                android:transitionName="nameTransition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:text="username"
-                android:textColor="#ffffff"
+                android:textColor="@color/black"
                 android:layout_marginLeft="25dp"
                 android:layout_marginStart="25dp"/>
 
@@ -41,9 +45,10 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chat_view"
+        android:background="@color/white"
         android:layout_below="@id/bar_layout"
         android:layout_above="@id/bottom_layout"
-        android:id="@+id/chat_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -60,9 +65,7 @@
             android:id="@+id/send_text"
             android:layout_width="260dp"
             android:layout_height="39dp"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="30dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="15dp"
             android:layout_marginRight="-290dp"
@@ -82,7 +85,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:background="@drawable/ic_baseline_send_24" />
+            android:background="@mipmap/thumbs_up_foreground" />
 
     </RelativeLayout>
 
