--- a/app/src/main/res/layout/activity_pop_in_chat_user.xml
+++ b/app/src/main/res/layout/activity_pop_in_chat_user.xml
@@ -10,6 +10,7 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/friends_profile_image_popup"
+        android:transitionName="imageTransition"
         android:layout_width="192dp"
         android:layout_height="168dp"
         android:layout_marginTop="16dp"
@@ -20,6 +21,7 @@
 
     <TextView
         android:id="@+id/friends_username_popup"
+        android:transitionName="nameTransition"
         android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
