--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -3,14 +3,19 @@
 
     <style name="AppTheme"
         parent="Theme.AppCompat.Light.NoActionBar">
-        
+        <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
         <item name="colorPrimary">@color/design_default_color_primary</item>
         <item name="colorAccent">@color/design_default_color_primary</item>
         <item name="colorPrimaryDark">@color/design_default_color_primary_dark</item>
     </style>
 
-    <style name="AppTheme.InChatPop">
+    <style name="ToolbarThemeBlack" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <item name="colorControlNormal">@color/black</item>
+        <item name="android:textColorPrimary">@color/black</item>
+    </style>
 
+    <style name="AppTheme.InChatPop">
+        <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
@@ -22,6 +27,7 @@
     </style>
 
     <style name="AppTheme.NoActionBar">
+        <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
         <item name="colorPrimary">@color/design_default_color_primary</item>
         <item name="colorAccent">@color/design_default_color_primary</item>
         <item name="colorPrimaryDark">@color/design_default_color_primary_dark</item>
@@ -30,6 +36,7 @@
     </style>
 
     <style name="inchat_popup_user">
+        <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
         <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
