--- a/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
+++ b/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
@@ -22,8 +22,18 @@
         android:id="@+id/profileBTN"
         android:layout_width="99dp"
         android:layout_height="44dp"
+        android:layout_marginTop="120dp"
         android:text="Profile"
-        tools:layout_editor_absoluteX="164dp"
-        tools:layout_editor_absoluteY="350dp" />
+        app:layout_constraintTop_toBottomOf="@+id/findBtn"
+        tools:layout_editor_absoluteX="156dp" />
+
+    <Button
+        android:id="@+id/btnFriendsList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="106dp"
+        android:text="Friends"
+        app:layout_constraintTop_toBottomOf="@+id/profileBTN"
+        tools:layout_editor_absoluteX="164dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
