Add the facebook function (share image have a bug need to fix) TODO connect to DB - user be able to share specific event

--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -36,4 +36,18 @@
         xlmns:layout_marginEnd="10dp"
         xlmns:layout_marginBottom="10dp"
         xlmns:src="@drawable/ic_plus" />
+
+
+    <ImageView
+        xlmns:id="@+id/shareEvent"
+        xlmns:layout_width="wrap_content"
+        xlmns:layout_height="wrap_content"
+        xlmns:layout_below="@+id/searchLocation"
+        xlmns:layout_alignParentRight="true"
+        xlmns:layout_marginStart="10dp"
+        xlmns:layout_marginTop="78dp"
+        xlmns:layout_marginEnd="10dp"
+        xlmns:layout_marginRight="7dp"
+        xlmns:layout_marginBottom="10dp"
+        xlmns:src="@drawable/messenger_button_white_bg_round" />
 </RelativeLayout>
