--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -12,7 +12,7 @@
         xlmns:layout_alignParentStart="true"
         xlmns:layout_alignParentTop="true"
         xlmns:layout_marginTop="60dp"
-        tools:context=".MapsFragment" />
+        tools:context=".Map.MapsFragment" />
 
 
     <SearchView
