--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="AppTheme"
         parent="Theme.AppCompat.Light.NoActionBar">
-        
+        <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
         <item name="colorPrimary">@color/design_default_color_primary</item>
         <item name="colorAccent">@color/design_default_color_primary</item>
         <item name="colorPrimaryDark">@color/design_default_color_primary_dark</item>
+    </style>
 
+    <style name="ToolbarThemeBlack" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <item name="colorControlNormal">@color/black</item>
+        <item name="android:textColorPrimary">@color/black</item>
+    </style>
 
+    <style name="AppTheme.InChatPop">
+        <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
     </style>
 
     <style name="MenuStyle" parent="Theme.AppCompat.Light">
@@ -16,6 +27,7 @@
     </style>
 
     <style name="AppTheme.NoActionBar">
+        <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
         <item name="colorPrimary">@color/design_default_color_primary</item>
         <item name="colorAccent">@color/design_default_color_primary</item>
         <item name="colorPrimaryDark">@color/design_default_color_primary_dark</item>
@@ -23,5 +35,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="inchat_popup_user">
+        <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
 
 </resources>
