--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -18,6 +18,12 @@
             android:layout_height="150dp"
             android:orientation="horizontal">
 
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                tools:layout_editor_absoluteX="368dp"
+                tools:layout_editor_absoluteY="-8dp" />
+
             <TextView
                 android:id="@+id/CreateDescription"
                 android:layout_width="190dp"
