--- a/app/src/main/res/layout/view_eventmarker.xml
+++ b/app/src/main/res/layout/view_eventmarker.xml
@@ -6,16 +6,19 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
         android:id="@+id/img"
-        android:src="@drawable/sport" />
+        android:layout_width="74dp"
+        android:layout_marginLeft="10dp"
+        android:layout_height="53dp"
+        android:src="@drawable/even" />
+
     <Button
-        android:id="@+id/share"
+        android:id="@+id/deleteEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Share"
+        android:text="delete"
+        android:visibility="gone"
         android:layout_alignParentRight="true"
         android:textSize="22dp"
         />
@@ -24,7 +27,7 @@
         android:id="@+id/capacity"
         android:layout_width="wrap_content"
         android:hint="capacity"
-        android:layout_below="@+id/share"
+        android:layout_below="@+id/deleteEvent"
         android:layout_margin="10dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
