--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout
         android:orientation="vertical"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Chat.MessagesFragment">
@@ -20,12 +19,12 @@
             app:tabTextColor="#ffffff"/>
 
 
-        <androidx.viewpager2.widget.ViewPager2
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/messageViewPager"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="647dp"
+            android:layout_height="537dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="0dp"
             android:orientation="vertical" />
 
     </LinearLayout>
