--- a/app/src/main/res/layout/friends_layout.xml
+++ b/app/src/main/res/layout/friends_layout.xml
@@ -2,9 +2,12 @@
 <RelativeLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_margin="2dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:layout_height="80dp"
+    android:padding="8dp"
+    android:elevation="2dp"
+    android:background="@drawable/friends_layout_background">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/friends_profile_image"
@@ -72,12 +75,5 @@
         android:layout_marginLeft="-15dp"
         android:layout_toRightOf="@id/friends_profile_image"
         android:layout_toEndOf="@id/friends_profile_image"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/friends_username"
-        android:layout_marginTop="30dp"
-        android:background="#c0c0c0" />
 
 </RelativeLayout>
