--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -6,51 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".Users.ResetPasswordActivity">
 
-    <com.google.android.material.textfield.TextInputLayout
+    <EditText
         android:id="@+id/textInputOldPassword"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="250dp"
+
+        android:layout_width="267dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        app:endIconMode="password_toggle"
+        android:layout_gravity="center"
+        android:drawableStart="@drawable/ic_baseline_email_24"
+        android:ems="10"
+
+        android:hint="Youre Password"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
-        tools:layout_editor_absoluteY="149dp">
+        tools:layout_editor_absoluteY="230dp" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password_input"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:hint="Enter your password"
-            android:inputType="textPassword" />
-    </com.google.android.material.textfield.TextInputLayout>
+    <EditText
+        android:id="@+id/textInputNewPassword"
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="250dp"
+        android:layout_width="267dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/textInputOldPassword"
-        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
-        tools:layout_editor_absoluteX="80dp">
+        android:layout_gravity="center"
+        android:drawableStart="@drawable/ic_baseline_email_24"
+        android:ems="10"
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputNewPassword"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="Enter New Password"
-            android:inputType="textPassword" />
-    </com.google.android.material.textfield.TextInputLayout>
+        android:hint="New Password"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputOldPassword" />
 
     <Button
-        android:id="@+id/btnReset"
+        android:id="@+id/btnChange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reset Passsword"
+        android:text="Change Password "
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="487dp" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textInputNewPassword" />
 </androidx.constraintlayout.widget.ConstraintLayout>
